intergration the booking logic at dashboard and show bookings data at calender

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/tripadvisor.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tripadvisor</title>
+    <title>Tripadvisor Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
